2016-01-05  Edward Jones  <ed.jones@embecosm.com>

	* include/Database.h (Database::addPass): Renamed to addPasses. Now
	takes a sequence of the passes to run.
	(Database::addResult): Renamed to addResults. Now takes a sequence of
	results.
	* lib/Database.cpp (Database::addPass): Renamed to addPasses.
	(Database::addResult): Renamed to addResults.
	* lib/Main.cpp (main): Use updated interfaces for Database::addResult
	and Database::addPasses.

2016-01-04  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (ResultIterator::m_query): Added member
	to hold the query during execution.
	* include/mageec/DatabaseQuery.h (DatabaseQuery::DatabaseQuery):
	Enable default move constructor, set others to deleted.
	* lib/Database.cpp (Database::trainMachineLearner): Correct feat_iter
	and param_iter iterators so that they iterate properly.
	(ResultIterator::ResultIterator): Initialize m_query.
	(ResultIterator::operator*): Increment feature_iter and param_iter
	iterators.
	* lib/C5.cpp (C5Driver::train): Fix segfault when assigning C5Context.

2015-12-18  Edward Jones  <ed.jones@embecosm.com>

  * CMakeLists.txt: Allow for older versions of CMake.

2015-12-18  Edward Jones  <ed.jones@embecosm.com>

  * lib/Database.cpp (Database::getTrainedMachineLearners): Fix crash
  when there are no trained machine learners in the database.

2015-12-17  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database): Make all uses of
	IMachineLearner non-const.
	* include/mageec/FeatureSet.h: Replace std::endl with newline.
	* include/mageec/Framework.h (Framework::getMachineLearners):
	Return a set of IMachineLearner interfaces instead of UUIDs.
	* include/mageec/ParameterSet.h: Replace std::endl with newline.
	* include/mageec/Util.h (dbg out): Added functions.
	(MAGEEC_PREFIX MAGEEC_ERR MAGEEC_WARN MAGEEC_DBG MAGEEC_STATUS):
	Add macros for debug.
	(UUID::operator std::string): Added function.