@@ -1,3 +1,8 @@
+2016-01-05  Simon Cook  <simon.cook@embecosm.com>
+
+	* include/mageec/Util.h (uint64_t crc64): Declare crc64.
+	* lib/Util.cpp (uint64_t crc64): Add crc64 implementation.
+
 2016-01-05  Edward Jones  <ed.jones@embecosm.com>
 
 	* include/Database.h (Database::addPass): Renamed to addPasses. Now
